header,cards,dark mode ,left right,favourite issue fixed

--- a/src/components/category/DisplayByCategories.css
+++ b/src/components/category/DisplayByCategories.css
@@ -63,7 +63,7 @@
     }
   }
 
-.swiper-button-prev,
+/* .swiper-button-prev,
 .swiper-button-next {
     cursor: pointer;
     color: var(--primary-color);
@@ -76,11 +76,11 @@
 }
 
 /* Responsive design */
-@media (max-width: 768px) {
+/* @media (max-width: 768px) {
     .category-image {
         width: 70px;
         height: 70px;
     }
-}
+/* } */ 
 
 
